otel-collector/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: otel-collector

spec:
  podSelector:
    matchLabels:
      app: otel
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - port: 4317
          protocol: TCP
        - port: 4318
          protocol: TCP
